# intid.rs

./: Cargo.toml  Justfile  LICENSE-MIT.txt  README.md  lefthook.yml
.github/workflows/: clippy.yml  spellcheck.yml  test.yml
crates/: README.md
crates/intid-alloactor/src/: unique.rs
crates/intid-alloactor/src/unique/: atomic.rs
crates/intid-allocator/: Cargo.toml
crates/intid-allocator/src/: lib.rs  reusing.rs
crates/intid-derive/: Cargo.toml
crates/intid-derive/src/: lib.rs
crates/intid-derive/tests/: basic.rs  derive.rs
crates/intid/src/: impls.rs  lib.rs  uint.rs
crates/intid/src/uint/: sealed.rs
idmap/: Cargo.toml  README.md
idmap-derive/: Cargo.toml
idmap-derive/src/: lib.rs
idmap/src/: direct.rs  enums.rs  graph.rs  lib.rs  utils.rs
idmap/src/direct/: macros.rs  map.rs  serde.rs  set.rs
idmap/src/enums/: map.rs  serde.rs  set.rs
idmap/src/utils/: bitsets.rs
idmap/src/utils/bitsets/: ones.rs
idmap/tests/: direct.rs  enum_map.rs  set.rs
intid/: Cargo.toml
intid-allocator/: Cargo.toml
intid-allocator/src/: lib.rs  reusing.rs  unique.rs
intid-allocator/src/unique/: atomic.rs
intid-core/: Cargo.toml
intid-core/src/: array.rs  impls.rs  lib.rs  macros.rs  trusted.rs  uint.rs  utils.rs
intid-core/src/uint/: sealed.rs
intid-core/src/utils/: iter.rs  order.rs
intid-core/tests/: declarative_macros.rs
intid-derive/: Cargo.toml
intid-derive/src/: analyze.rs  lib.rs
intid-derive/tests/: derive.rs
intid/src/: impls.rs  keys.rs  lib.rs  macros.rs  uint.rs
intid/tests/: declarative_macros.rs  derive.rs
src/: direct.rs  graph.rs  integer_id.rs  lib.rs  ordered.rs  serialization.rs  set.rs  table.rs
src/direct/: map.rs  serde.rs  set.rs
tests/: basic.rs  direct.rs  set.rs
