[workspace.package]
version = "0.3.0-beta.3"
repository = "https://github.com/DuckLogic/intid.rs"
authors = ["Techcable <git@techcable.net>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
# 1.56 - 2021 edition
# 1.61 - Vec::retain_mut
# 1.64 - workspace.package
# 1.65 - GAT
# 1.68 - sparse index
rust-version = "1.65"
edition = "2021"

[workspace]
resolver = "2"
members = ["intid", "idmap", "intid-allocator", "crates/*"]

[workspace.dependencies]
# crate dependencies
intid-derive = { path  = "crates/intid-derive", version = "0.3.0-beta.1" }
intid = { path  = "intid", version = "0.3.0-beta.1" }

[workspace.lints.rust]
missing-docs = "deny"

[workspace.lints.clippy]
## groups ##
cargo = { priority = -1, level = "warn" }

# restrictions
alloc_instead_of_core = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"

# safety
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
