[package]
name = "idmap"
version.workspace = true
description = "Efficient maps of integer id keys to values, backed by an underlying `Vec`"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme = "README.md"
license.workspace = true
rust-version.workspace = true
categories = ["data-structures", "rust-patterns"]
keywords = ["idmap", "table", "id", "array", "map"]

[features]
std = []
alloc = []
nightly = []
# Support serde serialization
serde = ["dep:serde"]
# Implement petgraph::visit::VisitMap for IdSet (petgraph v0.8)
petgraph_0_8 = ["dep:petgraph_0_8"]

[dependencies]
# Defines the IntegerId trait
intid = { path = "../intid-core", package = "intid-core", version = "0.3.2" }
# Used for DirectIdSet
fixedbitset = "0.5"
# optional features
serde = { version = "1", optional = true }
petgraph_0_8 = { package = "petgraph", version = "0.8", optional = true }

[lints]
workspace = true

[dev-dependencies]
# Testing serde
serde = "1"
serde_test = "1"
serde_derive = "1"
itertools = "0.14"
intid-derive.workspace = true

[package.metadata.docs.rs]
all-features = true
