[package]
name = "intid-core"
description = "Defines the IntegerId trait without a dependency on intid_derive"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
categories = ["no-std::no-alloc", "no-std", "rust-patterns", "data-structures"]
keywords = ["intid", "id", "counter", "idmap", "integer"]

[dependencies]
num-traits = { version = "0.2", optional = true }
nonmax = { version = "0.5", optional = true }
bytemuck = { workspace = true, optional = true }

[features]
default = ["std"]
# Implement traits for the standard library
std = []
# Have UnsignedPrimitiveInteger extend num_traits::PrimInt
num-traits = ["dep:num-traits"]
# Implement IntegerId for the nonmax integer types
nonmax = ["dep:nonmax"]
# integration with bytemuck
bytemuck = ["dep:bytemuck"]
# Take advantage of nightly features,
# and implement traits for nightly types
nightly = []

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
