[package]
name = "intid-derive"
version.workspace = true
description = "Procedural macros for the intid crate (prefer re-exports in intid)"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
categories = ["no-std", "no-std::no-alloc", "rust-patterns"]
keywords = ["enum", "derive", "intid", "idmap", "table"]

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
expander = { version = "2.2", optional = true }

[dev-dependencies.intid]
# Adding `intid` directly causes a circular dependency, breaking `cargo publish`.
# Adding `intid_core` directly isn't helpful since the macros all refer to `intid`.
# However, if we we do a renaming here then things work out fine
#
# NOTE: The renaming doesn't interact well with workspace inheritence here
package = "intid-core"
version = "0.3.0-rc.3"
path = "../intid-core"

[features]
_internal-use-expander = ["dep:expander"]

[lints]
workspace = true
