[package]
name = "intid"
description = "Defines the IntegerId trait"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
categories = ["no-std::no-alloc", "no-std", "rust-patterns", "data-structures"]
keywords = ["intid", "id", "counter", "idmap", "integer"]

[dependencies]
intid-derive = { workspace = true, optional = true }
intid-core.workspace = true

[features]
default = []
# Export a procedural macro implementing IntegerId
derive = ["dep:intid-derive"]
# Have UnsignedPrimitiveInteger extend num_traits::PrimInt
num-traits = ["intid-core/num-traits"]
# Implement IntegerId for the nonmax integer types
nonmax = ["intid-core/nonmax"]
# integration with bytemuck
bytemuck = ["intid-core/bytemuck"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
