[package]
name = "intid-derive"
version.workspace = true
description = "Procedural macros for the intid crate (prefer re-exports in intid)"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
categories = ["no-std", "no-std::no-alloc", "rust-patterns"]
keywords = ["enum", "derive", "intid", "idmap", "table"]

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
# NOTE: Adding `intid` here causes a circular dependency, breaking `cargo publish`

[features]
# doesn't do anything but added for completeness
__ci_all = []

[lints]
workspace = true
